# aibotto

./: .dockerignore  .env.example  .env.test  .gitignore  AGENTS.md  Dockerfile  README-Docker.md  README.md  TODO.md  bandit-report.json  check_env.py  debug_fixture.py  debug_security_config.py  debug_web_search.py  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  enhanced_tool_calling.py  minimal_security_test.py  mypy-fix-plan.md  pre-commit-checks.sh  pyproject.toml  python_executor_test.py  real_python_executor_test.py  requirements.txt  run.sh  setup-hooks.sh  simple_security_test.py  simulate_python_security.py  test-docker.sh  test_actual_search.py  test_api_response.py  test_api_structure.py  test_basic_search.py  test_cnn_access.py  test_content_extraction.py  test_content_extraction_fixed.py  test_debug_search.py  test_docker_python.py  test_enhanced_simple.py  (+17 more)
.githooks/: pre-commit
docs/: FACTUAL_RESPONSE_SYSTEM.md
src/aibotto/: __init__.py  cli_interface.py  main.py  prompt_cli.py
src/aibotto/ai/: __init__.py  agentic_loop_processor.py  agentic_orchestrator.py  backoff_handler.py  fact_checker.py  iteration_manager.py  llm_client.py  message_processor.py  prompt_templates.py  tool_calling.py  tool_executor.py  tool_tracker.py
src/aibotto/ai/subagent/: __init__.py  base.py  loader.py  python_script_agent.py  registry.py  subagent_executor.py  subagent_tool_executor.py  tool_registry.py  toolset.py  web_research_agent.py
src/aibotto/api/: __init__.py  server.py  utils.py
src/aibotto/bot/: __init__.py  handlers.py  telegram_bot.py
src/aibotto/bot/handlers/: content_handlers.py
src/aibotto/bot/services/: __init__.py  response_service.py  setup_service.py
src/aibotto/bot/utils/: __init__.py  bot_utils.py
src/aibotto/cli/: __init__.py  enhanced_executor.py  executor.py  security.py
src/aibotto/config/: __init__.py  base_security_config.py  cli_security_config.py  env_loader.py  headers_config.py  providers.yaml  python_security_config.py  security_config.py  settings.py  subagent_config.py
src/aibotto/config/subagents/web_research/: config.yaml  prompt.md
src/aibotto/db/: __init__.py  base_repository.py  models.py  operations.py
src/aibotto/stubs/: telegramify_markdown.pyi
src/aibotto/tools/: __init__.py  base.py  base_security_manager.py  cli_executor.py  cli_security_manager.py  delegate_tool.py  python_security_manager.py  research_tool.py  rss_extractor.py  security.py  subprocess_runner.py  tool_registry.py  toolset.py  web_fetch.py  web_search.py
src/aibotto/tools/executors/: cli_executor.py  python_direct_executor.py  python_executor.py  user_aspect_executor.py  web_fetch_executor.py  web_search_executor.py
src/aibotto/utils/: __init__.py  helpers.py  logging.py  message_splitter.py
tests/: AGENTS.md  TEST_STATUS_SUMMARY.md  __init__.py  config_helpers.py  conftest.py
tests/e2e/: debug_security_issue.py  debug_security_tool_calls.py  debug_test.py  isolated_test.py  simple_debug.py  test_basic_tool_interactions.py  test_complete_flow.py  test_parallel_tool_calls.py  test_security_fix.py  test_simplified_system.py  test_temporal_resolution.py  test_tool_calling_visibility.py  test_web_search_e2e.py  test_web_search_e2e.py.bak  test_web_search_real.py
tests/unit/: __init__.py  test_backoff_handler.py  test_base_repository.py  test_base_security_config.py  test_base_security_manager.py  test_bot.py  test_clear_command.py  test_cli.py  test_cli_interface.py  test_config.py  test_db.py  test_ddgs_error_handling.py  test_delegate_tool.py  test_enhanced_executor.py  test_enhanced_tool_calling.py  test_env_loader.py  test_factual_responses.py  test_glm_fix.py  test_llm_client.py  test_llm_retry.py  test_main.py  test_message_splitter.py  test_prompt_cli.py  test_prompt_templates.py  test_python_direct_executor.py  test_python_executor.py  test_refactored_security_config.py  test_refactored_security_manager.py  test_research_tool.py  test_safe_commands.py  test_setup_service.py  test_subagent_base.py  test_subagent_datetime.py  test_subagent_executor.py  test_subagent_registry.py  test_subagent_web_search.py  test_tool_calling_edge_cases.py  test_tool_calling_fix.py  test_tool_executor_base.py  test_user_aspect_executor.py  (+7 more)
