[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aibotto"
version = "0.1.0"
description = "AI Bot that communicates through Telegram and uses CLI tools to fulfill user requests"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "AIBOTTO Team", email = "support@aibotto.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=2.16.0",
    "python-telegram-bot>=22.6",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.13.3",
    "ddgs>=9.10.0",
    "trafilatura>=2.0.0",
    "telegramify-markdown>=1.0.0rc4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.19.1",
    "bandit>=1.9.3",
    "pre-commit>=3.0.0",
]

[project.scripts]
aibotto = "aibotto.main:main"
aibotto-cli = "aibotto.prompt_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aibotto"]

[tool.hatch.build.targets.sdist]
include = ["src/aibotto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

